Change the symbol of slash chords

--- a/songs/atyaisten-a-neped.tex
+++ b/songs/atyaisten-a-neped.tex
@@ -6,10 +6,10 @@
   % https://youtu.be/TuE9nzUoTQA
 
   \beginverse
-    Atya\[G]isten a \[Hm]néped jön \[C]Hozz\[Em\⁷/H]ád,
-    És \[Am]el\[G/H]hozza \[C\²]ál\[C]doza\[D\⁴]t\[D]át,
+    Atya\[G]isten a \[Hm]néped jön \[C]Hozz\[Em\⁷⁄H]ád,
+    És \[Am]el\[G⁄H]hozza \[C\²]ál\[C]doza\[D\⁴]t\[D]át,
     Mely a \[G]munkánk s a \[Hm]földünk gyü\[C]mölcs\[Em]e:
-    \[Am]A szín\[G/H]bor \[C]és \[D\⁷]a ke\[G]nyér.
+    \[Am]A szín\[G⁄H]bor \[C]és \[D\⁷]a ke\[G]nyér.
   \endverse
 
   \beginverse
