--- a/songs/finn-zarandokenek.tex
+++ b/songs/finn-zarandokenek.tex
@@ -5,13 +5,13 @@
 
   \beginverse
     \[Em]Valami v\[D]éget é\[G]r, \[C]kezdődik m\[G]ás tal\[D]án,
-    Látod, \[Em]megyünk az \[D/F#]élet \[G]sivatag\[Am]án,
-    \[G/H]Gyere, mert \[C]lépni musz\[D]áj!
+    Látod, \[Em]megyünk az \[D⁄F#]élet \[G]sivatag\[Am]án,
+    \[G⁄H]Gyere, mert \[C]lépni musz\[D]áj!
   \endverse
 
   \beginchorus
-    Szinte \[G]hallom, \[Am] újra \[G/H]hallom, \[C] szól a \[G]régó\[D/F#]ta vándor\[Em]lók dala, \[D]
-    Minden \[G]délben, \[Am] minden \[G/H]éjjel, \[C] vala\[G]hol zeng a \[D]dallam\[G]a.
+    Szinte \[G]hallom, \[Am] újra \[G⁄H]hallom, \[C] szól a \[G]régó\[D⁄F#]ta vándor\[Em]lók dala, \[D]
+    Minden \[G]délben, \[Am] minden \[G⁄H]éjjel, \[C] vala\[G]hol zeng a \[D]dallam\[G]a.
   \endchorus
 
   \beginverse
