--- a/songs/halovetok.tex
+++ b/songs/halovetok.tex
@@ -9,7 +9,7 @@
     \[G]Szólt, így szólt az Ú\[Hm]r
     -- Pedig már \[G]feladtuk, jó lesz az ú\[Hm]gy --
            % TODO:
-    Hogy: ``\[D/A]Menj, munkára fe\[A]l, csónakba há\[G\ˢᵘˢ\²]t!''.
+    Hogy: ``\[D⁄A]Menj, munkára fe\[A]l, csónakba há\[G\ˢᵘˢ\²]t!''.
   \endverse
 
   \beginverse
