--- a/songs/itt-a-szivem.tex
+++ b/songs/itt-a-szivem.tex
@@ -5,7 +5,7 @@
 
   % https://youtu.be/W2xj6v2AiIQ
 
-  % \gtab{E&}{X65(343)}, \gtab{A#/D}{XX0331}
+  % \gtab{E&}{X65(343)}, \gtab{A#⁄D}{XX0331}
 
   \ifchorded
     \musicnote{A közjátékok első akkordjai már a refrén utolsó szótagánál ("jön") kezdődnek.}
@@ -33,7 +33,7 @@
     Itt a \[A&]szí\[Cm]vem \[A#]kemény f\[E&]öld,
     Puszta\[A&]ság \[Cm]lett, \[A#]törd most \[E&]föl.
     Itt a \[A&]szí\[Cm]vem \[A#]száraz \[E&]kút,
-    \[E&/D]Áss le \[A&]mély\[Cm]re, \[A#]törjön \[A&maj7]út
+    \[E&⁄D]Áss le \[A&]mély\[Cm]re, \[A#]törjön \[A&maj7]út
     Élő \[A&]víz\[Cm]nek, mely \[A#]Tőled jön.
   \endchorus
 
@@ -55,7 +55,7 @@
     \beginverse*
       {\nolyrics
         Közjáték:
-        \[A&] \[Cm] \[A#4-A#] \[E&-A#/D]
+        \[A&] \[Cm] \[A#4-A#] \[E&-A#⁄D]
         \[A&] \[Cm] \[A#4-A#] \[E&]
       }
     \endverse
