--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse\memorize
-    \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
+    \[C] Látod, újra este van, Hozzád száll most \[C⁄H]halk sza\[Am]vam,
     \[Dm] Mindenségnek Iste\[F]n\[G]{\_{e}}, Téged dicsér éne\[C]kem.
   \endverse
 
