--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -14,10 +14,10 @@
   \fi
 
   \beginchorus
-    Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]{\_{á}}ldd az U\[Hm]rat,
+    Lelkem, \[G]áldd az Ur\[D]at, \[A⁄C#]{\_{á}}ldd az U\[Hm]rat,
     \[G]Egyedül \[D]Őt im\[A\⁴]ádd! \[A]
     Zengj úgy, \[G]mint soha \[Hm]még, \[G]Őt \[A]di\[Hm]csérd!
-    A l\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
+    A l\[G]elkem csak T\[A]éged \[G⁄D]áld! \[D] \[G⁄D] \[D]
   \endchorus
 
   \beginverse\memorize
