--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -2,7 +2,7 @@
 
   \beginverse\memorize
     \[Em]Sírásodat hagyd nyugodtan abba,
-    A kapuk mögött vissza\[Em/F#]állt a \[G]rend!
+    A kapuk mögött vissza\[Em⁄F#]állt a \[G]rend!
     \[Am]Ne sírj, oly' lágyan jár a \[Em]sz{\_{é}}l
     \[C]Róma s a \[D]Via Appia fe\[Em]lett!
   \endverse
