--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse\memorize
-    \[C]Rejts \[G/H]most \[Am]el a \[F]szár\[D/F#]nyad a\[G]lá,
+    \[C]Rejts \[G⁄H]most \[Am]el a \[F]szár\[D⁄F#]nyad a\[G]lá,
     E\[C]rős \[G]kéz\[F]zel \[Dm]takarj \[D]be \_{e}n\[G]gem!
   \endverse
 
