--- a/songs/szeretem-orokke.tex
+++ b/songs/szeretem-orokke.tex
@@ -5,9 +5,9 @@
 ]
 
   \beginverse\memorize
-    \[C]Eléd lépek, jó Uram, hol \[G/H]béke és nyugalom \[Am]vár,
+    \[C]Eléd lépek, jó Uram, hol \[G⁄H]béke és nyugalom \[Am]vár,
     \[Em]Vágyom, hogy érints \[Dm]Lelkeddel, hogy \[F]múljék, ami \[G]fáj.
-    Én \[C]hiszem, hogy itt vagy közöttünk, és \[G/H]halkan, szelíden \[Am]hívsz.
+    Én \[C]hiszem, hogy itt vagy közöttünk, és \[G⁄H]halkan, szelíden \[Am]hívsz.
     És mi \[Em]társaid leszünk \[Dm]örökké, hol \[F]boldog dalát \[G]zengi minden \[C]szív.
   \endverse
 
