--- a/songs/szivem-telve-van-veled.tex
+++ b/songs/szivem-telve-van-veled.tex
@@ -1,16 +1,11 @@
 \beginsong{Szívem telve van Veled}
 [
-  %by={Szerző},
-  %sr={Referencia},
-  %cr={\copyright~2015 XYZ.},
-  %li={Used with permission.},
-  %index={extra index entry for a line of lyrics},
-  %ititle={an extra index entry for a hidden title}
+  by={Craig Musseau, Harkai Nóra},
 ]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[E] \[G#m\⁷] \[A/H]}
+      {\nolyrics Előjáték: \[E] \[G#m\⁷] \[A⁄H]}
     \endverse
   \fi
 
