--- a/songs/te-vagy-szerelme.tex
+++ b/songs/te-vagy-szerelme.tex
@@ -5,24 +5,24 @@
   
   \ifchorded
     \gtab{D\²}{XX0230}
-    \gtab{D/F#}{300232}
-    \gtab{G\²/H}{X20033}
-    \gtab{A/C#}{X42220}
+    \gtab{D⁄F#}{300232}
+    \gtab{G\²⁄H}{X20033}
+    \gtab{A⁄C#}{X42220}
   \fi
 
   \beginverse
-    \[D]Te vagy sze\[A/C#]relme \[D/F#]életemn\[G]ek,
-    \[D] Barát és \[A/C#]társ, aki s\[G\²/H]zeret. \[A/C#]
-    \[D] Érinté\[A/C#]sedet \[D/F#]várja lény\[G]em,
-    \[D] Teljes szí\[A/C#]vemből sze\[G\²/H]retlek!
+    \[D]Te vagy sze\[A⁄C#]relme \[D⁄F#]életemn\[G]ek,
+    \[D] Barát és \[A⁄C#]társ, aki s\[G\²⁄H]zeret. \[A⁄C#]
+    \[D] Érinté\[A⁄C#]sedet \[D⁄F#]várja lény\[G]em,
+    \[D] Teljes szí\[A⁄C#]vemből sze\[G\²⁄H]retlek!
   \endverse
 
   \beginchorus
-    \[G\²/H] Vonj most magadhoz \[A/C#]még job\[D]ban, \[D\²]
-    \[A/C#] Végy fel \[G\²/H]a ka\[A/C#]rjaidb\[D]a,
-    \[G\²/H] Szíved dobbanását \[A/C#]hadd hallj\[D]am,
-    \[A/C#] Ó, \[G\²/H] \[A/C#] Jéz\[D]us,
-    \[A/C#] Ó, \[G\²/H] \[A]Jéz\[D]us!
+    \[G\²⁄H] Vonj most magadhoz \[A⁄C#]még job\[D]ban, \[D\²]
+    \[A⁄C#] Végy fel \[G\²⁄H]a ka\[A⁄C#]rjaidb\[D]a,
+    \[G\²⁄H] Szíved dobbanását \[A⁄C#]hadd hallj\[D]am,
+    \[A⁄C#] Ó, \[G\²⁄H] \[A⁄C#] Jéz\[D]us,
+    \[A⁄C#] Ó, \[G\²⁄H] \[A]Jéz\[D]us!
   \endchorus
 
 \endsong
