--- a/songs/utazos-dal.tex
+++ b/songs/utazos-dal.tex
@@ -19,7 +19,7 @@
   \endverse
 
   \beginchorus
-    Ez az \[C/E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
+    Ez az \[C⁄E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
     De e\[C]lőttem a ke\[F]reszted és a \[Am]csilla\[G]god \[C]már.
   \endchorus
 
@@ -43,7 +43,7 @@
   \refrain
 
   \beginchorus
-    Ez az \[C/E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
+    Ez az \[C⁄E]út, mit nekem \[F]adtál gyönyö\[Am]rű s néha \[G]fáj,
     De e\[C]lőttem új \[F]égbolt és \[Am]új föld \[G]mi \[C]vár.
   \endchorus
 
