--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -7,7 +7,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D/F#] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D⁄F#] :/ \rep{2}}
     \endverse
   \fi
 
@@ -30,7 +30,7 @@
 
     \ifchorded
       \vspace{0.3cm}
-      {\nolyrics Közjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D/F#] :/ \rep{2}}
+      {\nolyrics Közjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D⁄F#] :/ \rep{2}}
       \vspace{0.3cm}
     \fi
 
