--- a/songs/uram-tehozzad-futok.tex
+++ b/songs/uram-tehozzad-futok.tex
@@ -12,7 +12,7 @@
 
   \beginverse*
     Én pedig \[G]szüntelen remél\[D]ek, egyre \[Hm\⁷]jobban dicsér\[Em]lek,
-    Ajkam \[Am\⁷]beszéli a Te \[Am/F#]igazságo\[H\⁴]dat. \[H]
+    Ajkam \[Am\⁷]beszéli a Te \[Am⁄F#]igazságo\[H\⁴]dat. \[H]
     Hadd le\[G]gyen most a da\[D]lom jó i\[Hm]llat oltáro\[Em]don,
     Nagyon \[C]szeretlek Té\[D]ged, Jézu\[Em]som. \[Em!]
   \endverse
