Add three new songs (work in progress)

--- a/songs2.tex
+++ b/songs2.tex
@@ -6,8 +6,10 @@
 \input{songs/baranyom-baranyom.tex}
 \input{songs/beke-istene.tex}
 \input{songs/bemegyek-a-szentek-szentjebe.tex}
+\input{songs/csak-benned.tex}
 \input{songs/finn-zarandokenek.tex}
 \input{songs/halovetok.tex}
+\input{songs/igy-szolsz.tex}
 \input{songs/itt-a-szivem.tex}
 \input{songs/jezus-neved-oly-csodalatos.tex}
 \input{songs/jezus-te-vagy-az-ur-orokke.tex}
@@ -16,7 +18,8 @@
 \input{songs/labadnal-terdelek.tex}
 \input{songs/menjetek-be-kapuin.tex}
 \input{songs/nagy-vagy-urunk.tex}
-\input{songs/o-te-vagy-uram}
+\input{songs/o-te-vagy-uram.tex}
+\input{songs/orvendjetek-angyalok.tex}
 \input{songs/ropke-fohasz.tex}
 \input{songs/szentlelek.tex}
 \input{songs/szivem-telve-van-veled.tex}
